--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -71,7 +71,7 @@
                         <barButtonItem key="leftBarButtonItem" image="reveal-icon.png" id="qlm-9I-wUq"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="tTU-ch-4YA">
                             <connections>
-                                <segue destination="Xcd-an-bxR" kind="show" identifier="AddExpense" id="3er-JC-Cyy"/>
+                                <segue destination="JNE-qc-fiL" kind="presentation" identifier="AddExpense" id="3er-JC-Cyy"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -96,37 +96,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0,00" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CJT-VF-Gkj">
-                                <rect key="frame" x="16" y="72" width="288" height="80"/>
+                            <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Description" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OUB-bU-H45">
+                                <rect key="frame" x="16" y="192" width="288" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="Pic-Nu-R4B"/>
+                                    <constraint firstAttribute="height" constant="30" id="1uD-qQ-cKm"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
-                            </textField>
-                            <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Description" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OUB-bU-H45">
-                                <rect key="frame" x="16" y="212" width="288" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <action selector="descriptionTextFieldDidEndOnExit:" destination="Xcd-an-bxR" eventType="editingDidEndOnExit" id="1GE-gH-8y4"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0,00" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5cZ-te-IuN">
+                                <rect key="frame" x="16" y="72" width="288" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="aYD-lE-7za"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="42"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="CJT-VF-Gkj" firstAttribute="leading" secondItem="Yfz-Ja-pBD" secondAttribute="leading" constant="16" id="6X1-zC-OCd"/>
-                            <constraint firstItem="CJT-VF-Gkj" firstAttribute="top" secondItem="uDg-4G-nOg" secondAttribute="bottom" constant="8" id="Ofx-75-lio"/>
-                            <constraint firstAttribute="trailing" secondItem="CJT-VF-Gkj" secondAttribute="trailing" constant="16" id="hXL-xU-Szw"/>
+                            <constraint firstItem="5cZ-te-IuN" firstAttribute="leading" secondItem="Yfz-Ja-pBD" secondAttribute="leading" constant="16" id="T07-Vh-tnb"/>
+                            <constraint firstItem="OUB-bU-H45" firstAttribute="top" secondItem="5cZ-te-IuN" secondAttribute="bottom" constant="60" id="UKe-va-nKu"/>
+                            <constraint firstAttribute="trailing" secondItem="OUB-bU-H45" secondAttribute="trailing" constant="16" id="Xp3-x4-yU1"/>
+                            <constraint firstItem="OUB-bU-H45" firstAttribute="leading" secondItem="Yfz-Ja-pBD" secondAttribute="leading" constant="16" id="b6N-6I-Ror"/>
+                            <constraint firstItem="5cZ-te-IuN" firstAttribute="top" secondItem="uDg-4G-nOg" secondAttribute="bottom" constant="8" id="h8v-fv-QNP"/>
+                            <constraint firstAttribute="trailing" secondItem="5cZ-te-IuN" secondAttribute="trailing" constant="16" id="tQb-5Q-ERO"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Add Expense" id="4en-0w-yeL"/>
+                    <navigationItem key="navigationItem" title="Add Expense" id="4en-0w-yeL">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="epa-nb-SnK">
+                            <connections>
+                                <action selector="cancelButtonPressed:" destination="Xcd-an-bxR" id="vWI-Rc-o0l"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="descriptionTextField" destination="OUB-bU-H45" id="aUS-2c-kfz"/>
-                        <outlet property="expenseTextField" destination="CJT-VF-Gkj" id="8SK-S7-FvP"/>
+                        <outlet property="expenseTextField" destination="5cZ-te-IuN" id="zgH-sH-2Sq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VKY-Ma-HRB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="166" y="-383"/>
+            <point key="canvasLocation" x="557" y="-383"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9Bk-YW-U8l">
@@ -146,6 +161,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Asx-3q-bNQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-665" y="-383"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Lbj-aB-Pak">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JNE-qc-fiL" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ro9-vb-NAz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Xcd-an-bxR" kind="relationship" relationship="rootViewController" id="V1H-LI-UUc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I4V-79-vgx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="166" y="-383"/>
         </scene>
     </scenes>
     <resources>
