--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -126,6 +126,36 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="u5M-sP-eiF">
+                                <rect key="frame" x="0.0" y="251" width="320" height="317"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="Kij-AA-UGi" detailTextLabel="dm2-e9-W2C" style="IBUITableViewCellStyleValue1" id="dpo-cI-zsu">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dpo-cI-zsu" id="o4x-s8-9C3">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Kij-AA-UGi">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dm2-e9-W2C">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Eo6-E8-pxc" id="4Kl-n2-NOg"/>
+                                    <outlet property="delegate" destination="Eo6-E8-pxc" id="rrI-EY-cLS"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -145,6 +175,7 @@
                         <outlet property="revealBarButton" destination="qlm-9I-wUq" id="iuw-EK-cia"/>
                         <outlet property="secondCategoryNameLabel" destination="ikf-7w-Jkq" id="LHq-w8-DRV"/>
                         <outlet property="secondCategorySummaLabel" destination="POl-9q-h5e" id="gpA-59-0qS"/>
+                        <outlet property="tableView" destination="u5M-sP-eiF" id="GeH-Tp-Kew"/>
                         <outlet property="thirdCategoryNameLabel" destination="bxB-Bn-RpR" id="YD6-mK-eo8"/>
                         <outlet property="thirdCategorySummaLabel" destination="atr-tJ-CG1" id="9pu-4h-OtC"/>
                         <outlet property="totalSummaLabel" destination="kxL-xl-ePS" id="SeE-Kg-moV"/>
